--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>solf2x</title>
 </head>
 <body>
-    <h1>D.D<h1>
-    <h1>努力了很久想放弃，但是始终做不到<h1>
+    <h1>DD我爱你<h1>
+<!--     <h1>努力了很久想放弃，但是始终做不到<h1> -->
 </body>
 </html>
